[tool.poetry]
name = "chemtools"
version = "0.9.1"
description = "Python tools for quantum chemical calculations"
authors = ["Lukasz Mentel <lmmentel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
sqlalchemy = "^1.3.13"
scipy = "^1.4.1"
numpy = "^1.18.1"
mendeleev = "^0.5.2"
numba = "^0.48.0"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
pytest = "^5.3.5"
guzzle_sphinx_theme = "^0.7.11"
nbsphinx = "^0.5.1"
ipython = "^7.13.0"
bumpversion = "^0.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
